[package]
name = "futures-stopwatch"
version = "0.3.0"
authors = ["Erlend Langseth <3rlendhl@gmail.com>"]
description = "A future that reports the duration of its inner future"
license = "MIT"
repository = "https://github.com/Ploppz/futures-stopwatch"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
pin-project = "0.4.6"
[dev-dependencies]
tokio = {version = "0.2.9", features = ["time", "macros", "rt-threaded"]}
